--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -531,7 +531,7 @@
     <string name="ride_complete">Ride Completed</string>
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
-    <string name="resend_OTP_ul"><u>Resend OTP</u>></string>
+    <string name="resend_OTP_ul"><u>Resend OTP </u></string>
     <string name="return_reasons">Reasons of Return</string>
 
     <string name="accepted">Accepted</string>
