--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -926,8 +926,9 @@
     <string name="increase_by_10">Increase\nby 10%</string>
     <string name="documents_authentication">I accept that documents uploaded by me are true and correct. I understand that any attempt of providing incorrect, misleading information or fake documents will lead to my immediate black listing from the &appname; platform. &appname; platform reserves the right to take the matter to the law enforcement authorities in case of forged documents.</string>
     <string name="i_agree">I agree</string>
+    <string name="dont_agree">I disagree</string>
     <string name="chat_support">Chat Support</string>
-
+    <string name="t_and_c_login">By submitting OTP here and logging in the app you accept the <a href="https://jugnoo.in/sg/terms/driver/">Terms and Conditions </a> of Jugnoo. Please do not go further, if these are not OK with you.</string>
 
     <string-array name="CountryCodes">
         <item>+93,AF</item>
