--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -646,7 +646,7 @@
 
     <string name="self_enroled">ନିଜେ ଜୋଡ଼ିହେବା</string>
     <string name="upload_Documents">ଡକ୍ୟୁମେଣ୍ଟ୍ ଅପ୍-ଲୋଡ଼୍</string>
-    <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \u20B9 %2$s/Km</string>
+    <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be %2$s/Km</string>
     <string name="payment_sent">Payment Sent</string>
 
     <string name="ride_history_cap">RIDE HISTORY</string>
