stripe_integration: Express Integration completed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -931,8 +931,11 @@
     <string name="dont_agree">I disagree</string>
     <string name="chat_support">Chat Support</string>
     <string name="t_and_c_login">By submitting OTP here and logging in the app you accept the <a href="https://jugnoo.in/sg/terms/driver/">Terms and Conditions </a> of Jugnoo. Please do not go further, if these are not OK with you.</string>
+
     <string name="estimated_distance_format">Estimated Distance: %skm</string>
 
+
+    <string name="stripe_connect_title">Stripe</string>
 
     <string-array name="CountryCodes">
         <item>+93,AF</item>
