add theme to splash, language loader, refactor toolbar

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -912,6 +912,7 @@
 	<string name="hint_edt_phone">फोन नंबर</string>
 	<string name="code">कोड</string>
 	<string name="btn_text_OTP">ओटीपी उत्पन्न करें</string>
+	<string name="languages">भाषा</string>
 
 
 
