--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -960,7 +960,7 @@
     <string name="t_and_c_login">By submitting OTP here and logging in the app you accept the <a href="https://jugnoo.in/sg/terms/driver/">Terms and Conditions </a> of Jugnoo. Please do not go further, if these are not OK with you.</string>
     <string name="estimated_distance_format">Estimated Distance: %skm</string>
 
-
+    <string name="languages">Languages</string>
     <string-array name="CountryCodes">
         <item>+93,AF</item>
         <item>+355,AL</item>
